--- a/popup.html
+++ b/popup.html
@@ -12,12 +12,12 @@
 
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'SF Pro Text', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      width: 380px;
-      min-height: 240px;
+      width: 420px;
+      min-height: 480px;
       background: linear-gradient(135deg, #e3f2fd 0%, #f3e5f5 100%);
       color: #1d1d1f;
       line-height: 1.5;
-      overflow: hidden;
+      overflow-x: hidden;
     }
 
     .container {
@@ -25,8 +25,8 @@
       backdrop-filter: blur(20px);
       -webkit-backdrop-filter: blur(20px);
       border: 1px solid rgba(255, 255, 255, 0.3);
-      padding: 24px;
-      height: 100vh;
+      padding: 20px;
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
       position: relative;
@@ -68,24 +68,39 @@
       letter-spacing: -0.3px;
     }
 
+    .category {
+      margin-bottom: 20px;
+    }
+
+    .category-title {
+      font-size: 14px;
+      font-weight: 600;
+      color: #6e6e73;
+      margin-bottom: 8px;
+      padding-left: 4px;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+    }
+
     .btn {
       background: rgba(255, 255, 255, 0.2);
       backdrop-filter: blur(10px);
       -webkit-backdrop-filter: blur(10px);
       border: 1px solid rgba(255, 255, 255, 0.3);
       border-radius: 12px;
-      padding: 14px 20px;
-      font-size: 15px;
+      padding: 12px 16px;
+      font-size: 14px;
       font-weight: 500;
       color: #1d1d1f;
       cursor: pointer;
       transition: all 0.2s ease;
       width: 100%;
-      margin-bottom: 12px;
+      margin-bottom: 8px;
       display: flex;
       align-items: center;
-      justify-content: center;
-      gap: 8px;
+      justify-content: flex-start;
+      gap: 10px;
+      text-align: left;
     }
 
     .btn:hover {
@@ -111,6 +126,42 @@
       box-shadow: 0 6px 20px rgba(0, 122, 255, 0.3);
     }
 
+    .btn-success {
+      background: linear-gradient(135deg, #30d158 0%, #00c896 100%);
+      color: white;
+      border: none;
+      font-weight: 600;
+    }
+
+    .btn-success:hover {
+      background: linear-gradient(135deg, #28a745 0%, #00a67a 100%);
+      box-shadow: 0 6px 20px rgba(48, 209, 88, 0.3);
+    }
+
+    .btn-warning {
+      background: linear-gradient(135deg, #ff9500 0%, #ffb347 100%);
+      color: white;
+      border: none;
+      font-weight: 600;
+    }
+
+    .btn-warning:hover {
+      background: linear-gradient(135deg, #e68500 0%, #e6a040 100%);
+      box-shadow: 0 6px 20px rgba(255, 149, 0, 0.3);
+    }
+
+    .btn-danger {
+      background: linear-gradient(135deg, #ff3b30 0%, #ff6b6b 100%);
+      color: white;
+      border: none;
+      font-weight: 600;
+    }
+
+    .btn-danger:hover {
+      background: linear-gradient(135deg, #dc3545 0%, #e55a5a 100%);
+      box-shadow: 0 6px 20px rgba(255, 59, 48, 0.3);
+    }
+
     .btn-secondary {
       background: rgba(142, 142, 147, 0.3);
       color: #1d1d1f;
@@ -119,6 +170,16 @@
 
     .btn-secondary:hover {
       background: rgba(142, 142, 147, 0.4);
+    }
+
+    .btn-icon {
+      font-size: 16px;
+      min-width: 20px;
+      text-align: center;
+    }
+
+    .btn-text {
+      flex: 1;
     }
 
     .api-status {
@@ -162,21 +223,40 @@
       }
     }
 
+    @keyframes slideIn {
+      from {
+        opacity: 0;
+        transform: translateX(100%);
+      }
+      to {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+
     .container {
       animation: fadeIn 0.3s ease-out;
     }
 
-    .btn {
+    .category {
       animation: fadeIn 0.4s ease-out;
     }
 
-    .btn:nth-child(2) {
+    .category:nth-child(2) {
       animation-delay: 0.1s;
+    }
+
+    .category:nth-child(3) {
+      animation-delay: 0.2s;
+    }
+
+    .category:nth-child(4) {
+      animation-delay: 0.3s;
     }
 
     .api-status {
       animation: fadeIn 0.5s ease-out;
-      animation-delay: 0.2s;
+      animation-delay: 0.4s;
       animation-fill-mode: backwards;
     }
 
@@ -210,12 +290,57 @@
       <h1>书签助手</h1>
     </div>
 
-    <button id="analyze-bookmarks" class="btn btn-primary">
-      🔍 分析并整理书签
-    </button>
-    <button id="setup-api" class="btn btn-secondary">
-      ⚙️ 设置API
-    </button>
+    <!-- 书签管理分类 -->
+    <div class="category">
+      <div class="category-title">📂 书签管理</div>
+      <button id="bookmark-manager" class="btn btn-success">
+        <span class="btn-icon">📂</span>
+        <span class="btn-text">书签管理器</span>
+      </button>
+      <button id="organize-bookmarks" class="btn btn-primary">
+        <span class="btn-icon">📁</span>
+        <span class="btn-text">整理到文件夹</span>
+      </button>
+    </div>
+
+    <!-- 书签分析分类 -->
+    <div class="category">
+      <div class="category-title">🔍 智能分析</div>
+      <button id="analyze-bookmarks" class="btn btn-primary">
+        <span class="btn-icon">🔍</span>
+        <span class="btn-text">分析并分类书签</span>
+      </button>
+      <button id="export-csv" class="btn btn-secondary">
+        <span class="btn-icon">📊</span>
+        <span class="btn-text">导出CSV报告</span>
+      </button>
+    </div>
+
+    <!-- 书签检测分类 -->
+    <div class="category">
+      <div class="category-title">🔧 书签检测</div>
+      <button id="detect-duplicates" class="btn btn-warning">
+        <span class="btn-icon">🔄</span>
+        <span class="btn-text">检测重复书签</span>
+      </button>
+      <button id="detect-invalid" class="btn btn-warning">
+        <span class="btn-icon">❌</span>
+        <span class="btn-text">检测失效书签</span>
+      </button>
+      <button id="cleanup-bookmarks" class="btn btn-danger">
+        <span class="btn-icon">🧹</span>
+        <span class="btn-text">清理书签</span>
+      </button>
+    </div>
+
+    <!-- 设置分类 -->
+    <div class="category">
+      <div class="category-title">⚙️ 设置</div>
+      <button id="setup-api" class="btn btn-secondary">
+        <span class="btn-icon">⚙️</span>
+        <span class="btn-text">API设置</span>
+      </button>
+    </div>
     
     <div class="api-status">
       API状态: <span id="api-status" class="api-not-connected">检查中...</span>
