优化标签页

--- a/popup.html
+++ b/popup.html
@@ -293,11 +293,15 @@
     <!-- 书签管理分类 -->
     <div class="category">
       <div class="category-title">📂 书签管理</div>
-      <button id="bookmark-manager" class="btn btn-success">
+      <button id="bookmark-visualization" class="btn btn-success">
+        <span class="btn-icon">🎨</span>
+        <span class="btn-text">书签可视化</span>
+      </button>
+      <button id="bookmark-manager" class="btn btn-primary">
         <span class="btn-icon">📂</span>
         <span class="btn-text">书签管理器</span>
       </button>
-      <button id="organize-bookmarks" class="btn btn-primary">
+      <button id="organize-bookmarks" class="btn btn-secondary">
         <span class="btn-icon">📁</span>
         <span class="btn-text">整理到文件夹</span>
       </button>
