--- a/options.html
+++ b/options.html
@@ -428,9 +428,9 @@
       <div class="form-group" id="gemini-model-field">
         <label for="gemini-model">Gemini 模型</label>
         <select id="gemini-model">
-          <option value="gemini-pro">gemini-pro</option>
-          <option value="gemini-1.5-pro">gemini-1.5-pro</option>
-          <option value="gemini-1.5-flash">gemini-1.5-flash</option>
+          <option value="gemini-2.0-flash">gemini-2.0-flash</option>
+          <option value="gemini-2.5-flash-preview-05-20">Gemini 2.5 Flash 预览版 05-20</option>
+          <option value="gemini-2.5-pro-preview-06-05">Gemini 2.5 Pro 预览版</option>
         </select>
         <div class="info-text">选择合适的模型版本，不同模型可能有不同的能力和计费标准</div>
       </div>
