--- a/visualization.html
+++ b/visualization.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="apple-style.css">
 </head>
 <body class="visualization-page">
+
     <div class="main-container">
         <div id="folder-sidebar">
             <div id="sidebar-controls">
                 <button id="toggle-sidebar-btn" title="收起/展开侧边栏">‹</button>
+                <button id="icon-mode-btn" title="图标模式">◎</button>
             </div>
             <div id="folder-list-container">
                 <!-- Folder list will be loaded here -->
