完成一轮优化

--- a/visualization.html
+++ b/visualization.html
@@ -48,7 +48,7 @@
     </div>
 
     <!-- Advanced Settings Panel -->
-    <div id="settings-panel" class="hidden">
+    <div id="settings-panel">
         <div class="panel-content-wrapper">
             <div class="panel-sidebar">
                 <div class="panel-sidebar-header">
