--- a/visualization.html
+++ b/visualization.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>书签可视化</title>
     <link rel="stylesheet" href="apple-style.css">
+    <script src="lucide.min.js"></script>
     <style>
         /* 毛玻璃风格背景 */
         body {
