--- a/visualization.html
+++ b/visualization.html
@@ -5,7 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>书签可视化</title>
     <link rel="stylesheet" href="apple-style.css">
-    <script src="lucide.min.js"></script>
+    <!-- 引入Lucide图标库 - 使用更稳定的CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/lucide@latest/dist/umd/lucide.min.js"></script>
+    <script>
+        // 等待图标库加载完成
+        window.addEventListener('load', function() {
+            console.log('📦 Lucide库加载状态:', typeof lucide !== 'undefined' ? '已加载' : '未加载');
+            if (typeof lucide !== 'undefined') {
+                console.log('🔧 Lucide版本:', lucide.version);
+                console.log('🎯 createIcons方法:', typeof lucide.createIcons);
+                // 立即初始化图标
+                if (lucide.createIcons) {
+                    lucide.createIcons();
+                    console.log('✅ 页面加载时图标初始化完成');
+                }
+            }
+        });
+    </script>
     <style>
         /* 毛玻璃风格背景 */
         body {
@@ -176,17 +192,40 @@
 
     <div class="main-container">
         <div id="folder-sidebar">
-            <div id="sidebar-controls">
-                <button id="toggle-sidebar-btn" title="收起/展开侧边栏">‹</button>
-                <button id="icon-mode-btn" title="图标模式">◎</button>
-            </div>
+            <!-- 文件夹列表区域 -->
             <div id="folder-list-container">
                 <!-- Folder list will be loaded here -->
             </div>
+            
+            <!-- 侧边栏底部 - 所有按钮 -->
             <div id="sidebar-footer">
-                <button id="theme-settings-btn" class="view-btn" title="设置">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24"><path d="M19.4,12c0-0.2,0-0.4,0-0.6c0-0.2,0-0.4,0-0.6l2.1-1.6c0.2-0.1,0.2-0.4,0.1-0.6l-2-3.5C19.5,5,19.2,4.9,19,5l-2.5,1c-0.5-0.4-1-0.7-1.6-1l-0.4-2.7C14.5,2.2,14.2,2,14,2h-4c-0.2,0-0.5,0.2-0.5,0.4L9.1,5C8.6,5.3,8.1,5.6,7.5,6L5,5C4.8,4.9,4.5,5,4.4,5.2l-2,3.5C2.3,8.9,2.4,9.2,2.6,9.3l2.1,1.6c0,0.2,0,0.4,0,0.6c0,0.2,0,0.4,0,0.6l-2.1,1.6C2.4,14.8,2.3,15.1,2.4,15.3l2,3.5C4.5,19,4.8,19.1,5,19l2.5-1c0.5,0.4,1,0.7,1.6,1l0.4,2.7c0,0.2,0.2,0.4,0.5,0.4h4c0.2,0,0.5-0.2,0.5-0.4l0.4-2.7c0.5-0.3,1.1-0.6,1.6-1l2.5,1c0.2,0.1,0.5,0,0.6-0.2l2-3.5c0.1-0.2,0.1-0.5-0.1-0.6L19.4,12z M12,15.5c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5s3.5,1.6,3.5,3.5S13.9,15.5,12,15.5z"></path></svg>
-                </button>
+                <!-- 视图切换按钮 -->
+                <div class="view-controls-section">
+                    <button class="view-toggle-btn active" data-view="icon" title="图标视图">
+                        <i data-lucide="grid"></i>
+                        <span class="btn-text">图标视图</span>
+                    </button>
+                    <button class="view-toggle-btn" data-view="card" title="卡片视图">
+                        <i data-lucide="square"></i>
+                        <span class="btn-text">卡片视图</span>
+                    </button>
+                    <button class="view-toggle-btn" data-view="list" title="列表视图">
+                        <i data-lucide="list"></i>
+                        <span class="btn-text">列表视图</span>
+                    </button>
+                </div>
+                
+                <!-- 功能按钮区域 -->
+                <div class="function-controls-section">
+                    <div class="function-btn-row">
+                        <button class="function-btn" id="theme-settings-btn" title="设置">
+                            <i data-lucide="settings"></i>
+                        </button>
+                        <button class="function-btn" id="toggle-sidebar-btn" title="展开侧边栏">
+                            <i data-lucide="chevron-right"></i>
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="sidebar-resizer"></div>
@@ -194,20 +233,6 @@
             <div id="top-bar">
                 <div id="search-container">
                     <input type="text" id="search-input" placeholder="在当前分类下搜索...">
-                </div>
-                <div id="view-controls">
-                    <button id="list-view-btn" class="view-btn" title="列表视图">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24"><path d="M3 4h18v2H3V4zm0 7h18v2H3v-2zm0 7h18v2H3v-2z"></path></svg>
-                    </button>
-                    <button id="card-view-btn" class="view-btn active" title="卡片视图">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24"><path d="M4 4h6v6H4V4zm8 0h6v6h-6V4zM4 14h6v6H4v-6zm8 14h6v-6h-6v6z"></path></svg>
-                    </button>
-                    <button id="icon-view-btn" class="view-btn" title="图标视图">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24"><path d="M3 3h4v4H3V3zm5 0h4v4H8V3zm5 0h4v4h-4V3zM3 8h4v4H3V8zm5 0h4v4H8V8zm5 0h4v4h-4V8zM3 13h4v4H3v-4zm5 0h4v4H8v-4zm5 0h4v4h-4v-4z"></path></svg>
-                    </button>
-                    <button id="batch-mode-btn" class="view-btn" title="批量操作模式">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24"><path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-5 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"/></svg>
-                    </button>
                 </div>
             </div>
             <div id="bookmark-container">
