--- a/pages/newtab/index.html
+++ b/pages/newtab/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>书签工作台 - Nextab风格</title>
-  <link rel="stylesheet" href="./newtab.css" />
+  <!-- <link rel="stylesheet" href="./newtab.css" /> -->
+  <link rel="stylesheet" href="./index.css" />
   <link rel="stylesheet" href="../../components/UI/SettingsPanel.css" />
 </head>
 <body>
@@ -12,15 +13,14 @@
   <nav class="top-nav">
     <div class="nav-left">
       <div class="logo">📚 BookmarkHub</div>
-      <div class="search-container">
-        <i data-lucide="search" class="search-icon"></i>
-        <input type="text" class="search-input" placeholder="搜索书签和文件夹... (Ctrl + K)" />
-      </div>
     </div>
+
+    <div class="nav-center search-container">
+      <i data-lucide="search" class="search-icon"></i>
+        <input type="text" class="search-input" placeholder="搜索书签和文件夹... (Ctrl + K)" />
+    </div>
+
     <div class="nav-right">
-      <button class="nav-btn" title="设置">
-        <i data-lucide="settings"></i>
-      </button>
       <button class="nav-btn" title="个人资料">
         <i data-lucide="user"></i>
       </button>
@@ -33,10 +33,11 @@
   <!-- 主容器 -->
   <div class="main-container">
     <!-- 问候语区域 -->
-    <div class="greeting-section">
-      <h1 class="greeting-text">Hello! 👋</h1>
+    <!-- <div class="greeting-section">
+      <h1 class="greeting-text">Hello! <span class="emoji">👋</span></h1>
+      <p>这是一个笑脸 <span class="emoji">😊</span> 和一个爱心 <span class="emoji">❤️</span></p>
       <p class="greeting-time"><span id="current-time">--:--</span></p>
-    </div>
+    </div> -->
 
     <!-- 仪表板网格 -->
     <div class="dashboard-grid">
@@ -80,11 +81,11 @@
 
       <!-- 中央书签区域 -->
       <div class="bookmarks-section">
-        <div class="section-header">
+        <div class="section-header view-toggle" style="display: flex; align-items: center; justify-content: space-between;">
           <h2 class="section-title">Recent Bookmarks</h2>
-          <div class="view-toggle">
-            <button class="toggle-btn active" data-view="grid"><i data-lucide="layout-grid"></i></button>
-            <button class="toggle-btn" data-view="list"><i data-lucide="list"></i></button>
+          <div class="right-view-toggle">
+            <button class="toggle-btn active" data-view="grid" title="Grid View"><i data-lucide="layout-grid"></i></button>
+            <button class="toggle-btn" data-view="list" title="List View"><i data-lucide="list"></i></button>
           </div>
         </div>
         <div class="bookmarks-grid" id="bookmarks-grid">
@@ -94,39 +95,6 @@
 
       <!-- 右侧边栏 -->
       <div class="right-sidebar">
-        <!-- AI分析工具 -->
-        <div class="ai-tools-widget">
-          <div class="widget-header">
-            <i data-lucide="brain" class="widget-icon"></i>
-            <h3 class="widget-title">AI Tools</h3>
-          </div>
-          <div class="ai-tools-grid">
-            <button class="ai-tool-btn" id="analyze-bookmarks-btn" title="Analyze and categorize bookmarks">
-              <i data-lucide="zap"></i>
-              <span>Smart Analysis</span>
-            </button>
-            <button class="ai-tool-btn" id="detect-duplicates-btn" title="Find duplicate bookmarks">
-              <i data-lucide="copy"></i>
-              <span>Find Duplicates</span>
-            </button>
-            <button class="ai-tool-btn" id="check-broken-btn" title="Check for broken links">
-              <i data-lucide="link-off"></i>
-              <span>Check Links</span>
-            </button>
-            <button class="ai-tool-btn" id="clean-folders-btn" title="Clean empty folders">
-              <i data-lucide="folder-minus"></i>
-              <span>Clean Folders</span>
-            </button>
-            <button class="ai-tool-btn" id="generate-report-btn" title="Generate detection report">
-              <i data-lucide="file-text"></i>
-              <span>Generate Report</span>
-            </button>
-          </div>
-          <div class="ai-status" id="ai-status">
-            <span class="status-text">Ready</span>
-          </div>
-        </div>
-
         <!-- 数据统计 -->
         <div class="stats-widget">
           <div class="widget-header">
@@ -161,6 +129,41 @@
             </div>
           </div>
         </div>
+
+        <!-- AI分析工具 -->
+        <div class="ai-tools-widget">
+          <div class="widget-header">
+            <i data-lucide="brain" class="widget-icon"></i>
+            <h3 class="widget-title">AI Tools</h3>
+          </div>
+          <div class="ai-tools-grid">
+            <button class="ai-tool-btn" id="analyze-bookmarks-btn" title="Analyze and categorize bookmarks">
+              <i data-lucide="zap"></i>
+              <span>Smart Analysis</span>
+            </button>
+            <button class="ai-tool-btn" id="detect-duplicates-btn" title="Find duplicate bookmarks">
+              <i data-lucide="copy"></i>
+              <span>Find Duplicates</span>
+            </button>
+            <button class="ai-tool-btn" id="check-broken-btn" title="Check for broken links">
+              <i data-lucide="link-off"></i>
+              <span>Check Links</span>
+            </button>
+            <button class="ai-tool-btn" id="clean-folders-btn" title="Clean empty folders">
+              <i data-lucide="folder-minus"></i>
+              <span>Clean Folders</span>
+            </button>
+            <button class="ai-tool-btn" id="generate-report-btn" title="Generate detection report">
+              <i data-lucide="file-text"></i>
+              <span>Generate Report</span>
+            </button>
+          </div>
+          <div class="ai-status" id="ai-status">
+            <span class="status-text">Ready</span>
+          </div>
+        </div>
+
+        
 
         <!-- 快速笔记 -->
         <div class="notes-widget">
@@ -215,6 +218,6 @@
   <!-- Settings modal will be dynamically created by SettingsPanel module -->
 
   <!-- Page controller (ES Module) -->
-  <script type="module" src="./newtab.js"></script>
+  <script type="module" src="./index.js"></script>
 </body>
 </html>
