--- a/visualization.html
+++ b/visualization.html
@@ -538,6 +538,8 @@
             color: #8E8E93;
             background-color: rgba(255, 255, 255, 0.1);
             border-radius: var(--radius-small);
+            font-size: 18px;
+            line-height: 1;
         }
 
         .fallback-icon i {
