Add UI design system and workbench enhancements
Introduced a unified UI design system with new CSS files and updated documentation. Added WORKBENCH_ENHANCEMENTS.md detailing new features for the analysis workbench. Updated favicon logic in bookmark and duplicate detection to use DuckDuckGo icons instead of Chrome favicons. Added new and optimized HTML pages for detailed analysis, and improved code structure and modularity.

--- a/pages/newtab/index.html
+++ b/pages/newtab/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>书签工作台 - Nextab风格</title>
   <!-- <link rel="stylesheet" href="./newtab.css" /> -->
-  <link rel="stylesheet" href="./index.css" />
+  <link rel="stylesheet" href="../../styles/index.css" />
   <link rel="stylesheet" href="../../components/UI/SettingsPanel.css" />
 </head>
 <body>
