--- a/pages/newtab/index.html
+++ b/pages/newtab/index.html
@@ -69,7 +69,7 @@
         </div>
 
         <!-- 时钟组件 -->
-        <div class="clock-widget">
+        <div class="clock-widget widget"  data-clock-style="minimal">
           <div class="widget-header">
             <i data-lucide="clock" class="widget-icon"></i>
             <h3 class="widget-title">World Clock</h3>
@@ -122,10 +122,13 @@
               <div class="stat-label">Added This Week</div>
             </div>
           </div>
+
           <div class="top-domains">
             <h4 class="top-domains-title">Top Domains</h4>
             <div class="domains-list" id="top-domains-list">
-              <!-- 动态填充 -->
+               <div class="widget">
+                 <!-- 动态填充 -->
+               </div> 
             </div>
           </div>
         </div>
@@ -179,7 +182,7 @@
               </button>
             </div>
           </div>
-          <textarea class="notes-textarea" id="quick-notes" placeholder="Click to add your quick notes..."></textarea>
+          <textarea class="notes-textarea widget" id="quick-notes" placeholder="Click to add your quick notes..."></textarea>
           <div class="notes-footer">
             <span class="notes-char-count" id="notes-char-count">0 characters</span>
             <span class="notes-status" id="notes-status">Saved</span>
