--- a/pages/newtab/index.html
+++ b/pages/newtab/index.html
@@ -100,8 +100,8 @@
            主内容区 (Main Content)
            ========================== -->
       <main class="bookmarks-section">
-        <div class="bookmarks-toolbar">
-          <h2 class="section-title">最近书签</h2>
+        <div class="bookmarks-toolbar" style="display: flex; align-items: center; justify-content: space-between;">
+          <h2 class="section-title" style="margin: 0;">最近书签</h2>
           <div class="view-toggle">
             <button class="toggle-btn active" data-view="grid" title="网格视图"><i data-lucide="layout-grid"></i></button>
             <button class="toggle-btn" data-view="list" title="列表视图"><i data-lucide="list"></i></button>
