feat(ai-center): complete implementation of AI智能分析中心 and enhanced bookmark manager
This change fully implements the AI Analysis Center, integrating all core and advanced features specified in the design plan. Now supports truly modular AI-driven classification, enhanced bookmark detection/management, comprehensive visualization, and a unified, contemporary UI.

- Adds ai-analysis-center.html/js, ai-hub.html/js, and enhanced-bookmark-manager.html/js for full workflow navigation
- Implements tabbed smart analysis, detection, data, management, visualization, with auto-run URL support
- Popup and manifest updated for seamless AI hub integration and quick entry
- Polished with毛玻璃风格全局UI, logging, state sync, batch ops, and performance optimization
- Includes test page for system feature validation

BREAKING CHANGE: Upgrades manifest and navigation; all AI and manager interfaces now route through new AI hub and center

--- a/popup.html
+++ b/popup.html
@@ -546,6 +546,23 @@
       </div>
     </div>
 
+    <!-- AI智能中枢 -->
+    <div class="category">
+      <div class="category-title">
+        <span>🤖</span>
+        <span>AI智能中枢</span>
+      </div>
+      <button id="open-ai-hub" class="btn btn-primary">
+        <span class="btn-icon">🚀</span>
+        <span class="btn-text">AI智能中枢</span>
+        <span class="btn-badge">新功能</span>
+      </button>
+      <button id="quick-analysis" class="btn btn-success">
+        <span class="btn-icon">⚡</span>
+        <span class="btn-text">快速AI分析</span>
+      </button>
+    </div>
+
     <!-- 主要功能分类 -->
     <div class="category">
       <div class="category-title">
