feat(bookmarks): enhance bookmark management with pinning, folder visualization, and analysis center
This change improves the bookmark experience by enabling pinning,
adding a folder visualization manager, and completing the analysis page.

- Users can pin/unpin bookmarks from the context menu; pinned bookmarks
  appear at the top and are visually highlighted.
- Added a new folder visualization management module with a dedicated
  page accessible from the navbar for visual folder browsing and actions.
- Implemented a comprehensive detailed analysis center for intelligent
  bookmark analysis, detection, and batch operations, resolving
  missing analysis features.

These features improve user control, discoverability, and maintenance
of bookmarks, and address gaps in analysis and visualization tooling.

--- a/pages/newtab/index.html
+++ b/pages/newtab/index.html
@@ -34,6 +34,9 @@
       <button class="nav-btn" id="analysis-btn" title="智能分析中心">
         <i data-lucide="brain"></i>
       </button>
+      <button class="nav-btn" id="folder-manager-btn" title="文件夹可视化管理">
+        <i data-lucide="folder-tree"></i>
+      </button>
       <button class="nav-btn" id="settings-btn" title="Settings">
         <i data-lucide="settings"></i>
       </button>
@@ -238,6 +241,11 @@
     <div class="context-menu-item" data-action="open-new-tab">
       <i data-lucide="plus-square"></i>
       <span>在新标签页中打开</span>
+    </div>
+    <div class="context-menu-separator"></div>
+    <div class="context-menu-item" data-action="pin" id="pin-menu-item">
+      <i data-lucide="pin"></i>
+      <span>置顶</span>
     </div>
     <div class="context-menu-separator"></div>
     <div class="context-menu-item" data-action="edit">
